frontend/jest-output.txt
Debugger listening on ws://127.0.0.1:53920/45cd7d38-aa6f-418c-af4c-f8b9ec492bf5
For help, see: https://nodejs.org/en/docs/inspector
Debugger attached.
FAIL src/App.test.js
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    SyntaxError: /root/todo-list-xtreme/frontend/src/App.test.js: Support for the experimental syntax 'jsx' isn't currently enabled (6:10):

      4 |
      5 | test('renders Todo List Xtreme header', () => {
    > 6 |   render(<App />);
        |          ^
      7 |   const header = screen.getByText(/todo list xtreme/i);
      8 |   expect(header).toBeInTheDocument();
      9 | });

    Add @babel/preset-react (https://github.com/babel/babel/tree/main/packages/babel-preset-react) to the 'presets' section of your Babel config to enable transformation.
    If you want to leave it as-is, add @babel/plugin-syntax-jsx (https://github.com/babel/babel/tree/main/packages/babel-plugin-syntax-jsx) to the 'plugins' section to enable parsing.

    If you already added the plugin for this syntax to your config, it's possible that your config isn't being loaded.
    You can re-run Babel with the BABEL_SHOW_CONFIG_FOR environment variable to show the loaded configuration:
    	npx cross-env BABEL_SHOW_CONFIG_FOR=/root/todo-list-xtreme/frontend/src/App.test.js <your build command>
    See https://babeljs.io/docs/configuration#print-effective-configs for more info.

      at toParseError (node_modules/@babel/parser/src/parse-error.ts:95:45)
      at Parser.raise (node_modules/@babel/parser/src/tokenizer/index.ts:1503:19)
      at Parser.expectOnePlugin (node_modules/@babel/parser/src/tokenizer/index.ts:1568:18)
      at Parser.parseExprAtom (node_modules/@babel/parser/src/parser/expression.ts:1255:16)
      at Parser.parseExprSubscripts (node_modules/@babel/parser/src/parser/expression.ts:728:23)
      at Parser.parseUpdate (node_modules/@babel/parser/src/parser/expression.ts:707:21)
      at Parser.parseMaybeUnary (node_modules/@babel/parser/src/parser/expression.ts:669:23)
      at Parser.parseMaybeUnaryOrPrivate (node_modules/@babel/parser/src/parser/expression.ts:403:14)
      at Parser.parseExprOps (node_modules/@babel/parser/src/parser/expression.ts:415:23)
      at Parser.parseMaybeConditional (node_modules/@babel/parser/src/parser/expression.ts:370:23)
      at Parser.parseMaybeAssign (node_modules/@babel/parser/src/parser/expression.ts:301:21)
      at callback (node_modules/@babel/parser/src/parser/expression.ts:257:12)
      at Parser.allowInAnd (node_modules/@babel/parser/src/parser/expression.ts:3149:12)
      at Parser.parseMaybeAssignAllowIn (node_modules/@babel/parser/src/parser/expression.ts:256:17)
      at Parser.parseExprListItem (node_modules/@babel/parser/src/parser/expression.ts:2743:18)
      at Parser.parseCallExpressionArguments (node_modules/@babel/parser/src/parser/expression.ts:1030:14)
      at Parser.parseCoverCallAndAsyncArrowHead (node_modules/@babel/parser/src/parser/expression.ts:908:29)
      at Parser.parseSubscript (node_modules/@babel/parser/src/parser/expression.ts:790:19)
      at Parser.parseSubscripts (node_modules/@babel/parser/src/parser/expression.ts:749:19)
      at Parser.parseExprSubscripts (node_modules/@babel/parser/src/parser/expression.ts:734:17)
      at Parser.parseUpdate (node_modules/@babel/parser/src/parser/expression.ts:707:21)
      at Parser.parseMaybeUnary (node_modules/@babel/parser/src/parser/expression.ts:669:23)
      at Parser.parseMaybeUnaryOrPrivate (node_modules/@babel/parser/src/parser/expression.ts:403:14)
      at Parser.parseExprOps (node_modules/@babel/parser/src/parser/expression.ts:415:23)
      at Parser.parseMaybeConditional (node_modules/@babel/parser/src/parser/expression.ts:370:23)
      at Parser.parseMaybeAssign (node_modules/@babel/parser/src/parser/expression.ts:301:21)
      at Parser.parseExpressionBase (node_modules/@babel/parser/src/parser/expression.ts:226:23)
      at callback (node_modules/@babel/parser/src/parser/expression.ts:217:39)
      at Parser.allowInAnd (node_modules/@babel/parser/src/parser/expression.ts:3144:16)
      at Parser.parseExpression (node_modules/@babel/parser/src/parser/expression.ts:217:17)
      at Parser.parseStatementContent (node_modules/@babel/parser/src/parser/statement.ts:675:23)
      at Parser.parseStatementLike (node_modules/@babel/parser/src/parser/statement.ts:468:17)
      at Parser.parseStatementListItem (node_modules/@babel/parser/src/parser/statement.ts:417:17)
      at Parser.parseBlockOrModuleBlockBody (node_modules/@babel/parser/src/parser/statement.ts:1435:16)
      at Parser.parseBlockBody (node_modules/@babel/parser/src/parser/statement.ts:1408:10)
      at Parser.parseBlock (node_modules/@babel/parser/src/parser/statement.ts:1376:10)
      at Parser.parseFunctionBody (node_modules/@babel/parser/src/parser/expression.ts:2580:24)
      at Parser.parseArrowExpression (node_modules/@babel/parser/src/parser/expression.ts:2521:10)
      at Parser.parseParenAndDistinguishExpression (node_modules/@babel/parser/src/parser/expression.ts:1808:12)
      at Parser.parseExprAtom (node_modules/@babel/parser/src/parser/expression.ts:1153:21)
      at Parser.parseExprSubscripts (node_modules/@babel/parser/src/parser/expression.ts:728:23)
      at Parser.parseUpdate (node_modules/@babel/parser/src/parser/expression.ts:707:21)
      at Parser.parseMaybeUnary (node_modules/@babel/parser/src/parser/expression.ts:669:23)
      at Parser.parseMaybeUnaryOrPrivate (node_modules/@babel/parser/src/parser/expression.ts:403:14)
      at Parser.parseExprOps (node_modules/@babel/parser/src/parser/expression.ts:415:23)
      at Parser.parseMaybeConditional (node_modules/@babel/parser/src/parser/expression.ts:370:23)
      at Parser.parseMaybeAssign (node_modules/@babel/parser/src/parser/expression.ts:301:21)
      at callback (node_modules/@babel/parser/src/parser/expression.ts:257:12)
      at Parser.allowInAnd (node_modules/@babel/parser/src/parser/expression.ts:3149:12)
      at Parser.parseMaybeAssignAllowIn (node_modules/@babel/parser/src/parser/expression.ts:256:17)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        0.422 s
Ran all test suites.
Waiting for the debugger to disconnect...
